# RAG_AI_chatbot

./: .env  .gitignore  README.md  check_qdrant.py  config.py  convertor.py  debug_embedding.py  delete_collection.py  doc_parser__old.py  docker-compose.yml  main.py  pipeline.py  pyproject.toml  pyproject.toml.backup  rebuild_database.py  requirements.txt  test.py
UI/: gradio_func.py  gradio_ui.py  gradio_ui2.py
agent/: answer_agent.py  rag_agent.py
data/: Đô Thị Hóa.docx
draf/: _doc_parser_old2.py  _docx_parser_old2.py  _pdf_parser_old.py  _pdf_parser_old2.py  convertor.py  delete_collection.py  doc_parser__old.py  retriever.py
parsers/: _base_parser.py  _docling_docx_parser.py  _docling_md_parser.py  _docling_pdf_parser.py  _docling_txt_parser.py  _docx_parser.py  _pdf_parser.py  doc_parser.py  router_parser.py
processing/: QdrantWriter.py  _chunker.py  _cleaner.py  _doc_parser.py  chunker.py  cleaner.py  embedder.py  files_to_embed.py
services/: db_service.py  rag_service.py
storage/: qdrant_query_manager.py  qdrant_store_manager.py  retriever.py  vector_store.py
utils/: logger.py
