[project]
name = "haystack-data-convertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "colorlog>=6.9.0",
    "qdrant-haystack>=9.2.0",
    "qdrant-client>=1.15.1",
    "python-dotenv>=1.1.1",
    "gradio>=5.42.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "markdown>=3.8.2",
    "docling>=2.7.0",
    "haystack-ai>=2.16.1",
    "nltk>=3.9.1",
]
